# robert-middleware

./: .gitattributes  .gitignore  CMakeLists.txt  PROTOCOL.md  README.md  client.py  justfile  message.md  standardsandreferences.md  users.conf
include/: command.hpp  data.hpp  decoder.hpp  parser.hpp  robot.hpp  server.hpp  session.hpp  target.hpp  utils.hpp  values.hpp
rapid/: MainModule.mod  OperationModule.mod  ParsingModule.mod  ServerModule.mod  TelemetryModule.mod  ValueModule.mod  default.mod
src/: command.cpp  data.cpp  decoder.cpp  main.cpp  parser.cpp  robot.cpp  server.cpp  target.cpp  utils.cpp  utils.hpp
src/commands/: CMakeLists.txt  commands.cpp  commands.hpp  decoder.cpp  decoder.hpp
src/core/: CMakeLists.txt  data.cpp  data.hpp
src/robot/: CMakeLists.txt  robot.cpp  robot.hpp
src/server/: CMakeLists.txt  request_handler.cpp  request_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp  sock_comm.cpp  sock_comm.hpp  tasker.cpp  tasker.hpp
